--- a/PHASE-1/1. Create_VM.md
+++ b/PHASE-1/1. Create_VM.md
@@ -1,5 +1,13 @@
 To create an Ubuntu EC2 instance in AWS, follow these steps:
 
+
+
+**Notes:**
+ - Security Group Configuration
+ - Key Pair Setting
+
+
+
 1. **Sign in to the AWS Management Console**:
    - Go to the AWS Management Console at https://aws.amazon.com/console/.
    - Sign in with your AWS account credentials.
