--- a/PHASE-1/2. K8-Setup.md
+++ b/PHASE-1/2. K8-Setup.md
@@ -1,5 +1,17 @@
 #  Setup K8-Cluster using kubeadm [K8 Version-->1.28.1]
 
+
+
+**Notes**
+  - docker & k8s setup
+  - error resolution refer to :
+  - understand kubeadm/kubelet/kubectl
+  - config k8s cluster (calico or ?)
+  - ? ingress nginx
+
+
+
+
 ### 1. Update System Packages [On Master & Worker Node]
 
 ```bash
@@ -65,3 +77,11 @@ kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
 kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.49.0/deploy/static/provider/baremetal/deploy.yaml
 ```
 
+
+
+
+
+```bash
+
+
+```
